@@ -1,5 +1,3 @@
-SUBDIRS = icons
-
 sugar.gtkrc: gtkrc.em
 	$(srcdir)/em.py -D theme=\'sugar\' $(srcdir)/gtkrc.em > \
 		$(top_builddir)/data/sugar.gtkrc
