@@ -1,9 +1,0 @@
-iconsdir = $(pkgdatadir)/data/icons
-icons_DATA =		\
-	arrow_NE.svg	\
-	arrow_NW.svg	\
-	arrow_SE.svg	\
-	arrow_SW.svg
-
-EXTRA_DIST =                    \
-	$(icons_DATA)
