@@ -1,3 +1,5 @@
+* #4428 Revert to the trial-3 frame behavior (marco)
+
 Snapshot 176262f2e9
 
 * Added morgs NotifyAlert (timed one button alert) to the alert api (erikos)
